tests/lean/attrCmd.lean.expected.out
attrCmd.lean:6:0-6:6: error: failed to synthesize
  Pure M

Additional diagnostic information may be available using the `set_option diagnostics true` command.
